# langchain-course

./: .example_env  chats.py  config.py  pyproject.toml
chapters/: chapter_1.ipynb  chapter_2_langsmith.ipynb  chapter_3_prompts.ipynb  chapter_4_memory.ipynb  chapter_5_agents_intro.ipynb  chapter_6_agents.ipynb  chapter_7_lcel.ipynb  chapter_8_streaming.ipynb  constants.py
